--- a/Editorial Index.html
+++ b/Editorial Index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/rhq4hcw.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <title>Editorial</title>
-<link href="Editorial site.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="editorial site.css" rel="stylesheet" type="text/css" media="screen"/>
 <link href="2-vertical.css" rel="stylesheet">
 <script type="javascript" src="Editorial.js"></script>
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/mvmarkey%20index.html" />
