--- a/about me index.html
+++ b/about me index.html
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" href="https://use.typekit.net/rhq4hcw.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link href="about me site.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="About Me site.css" rel="stylesheet" type="text/css" media="screen"/>
 <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/About%20Me%20index.html"/>
 <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/Editorial%20Index.html"/>
   <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/morganvmarkey%20index.html"/>
@@ -33,7 +33,7 @@
 
           <h4>
             <span>
-              <a class="name1" href="about me index.html"style="text-decorations:none; color:inherit">About</a></span>
+              <a class="name1" href="About Me index.html"style="text-decorations:none; color:inherit">About</a></span>
               <!--You can change the link in "href" -->
             <span> <a class="name1"href="Editorial index.html"style="text-decorations:none; color:inherit">Editorial</a> </span>
             <!-- You can change the link in "href" -->
