--- a/photography index.html
+++ b/photography index.html
@@ -36,7 +36,7 @@
 
           <h4>
             <span>
-              <a class="name1" href="about me index.html"style="text-decorations:none; color:inherit">About</a></span>
+              <a class="name1" href="About Me index.html"style="text-decorations:none; color:inherit">About</a></span>
               <!--You can change the link in "href" -->
 
             <span> <a class="name1"href="Editorial index.html"style="text-decorations:none; color:inherit">Editorial</a> </span>
