--- a/Editorial Index.html
+++ b/Editorial Index.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="https://use.typekit.net/rhq4hcw.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <title>Editorial</title>
-<link href="editorial site.css" rel="stylesheet" type="text/css" media="screen"/>
-<link href="2-vertical.css" rel="stylesheet">
+<link href="Editorial site.css" rel="stylesheet" type="text/css" media="screen"/>
+<!-- <link href="2-vertical.css" rel="stylesheet"> -->
 <script type="javascript" src="Editorial.js"></script>
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/mvmarkey%20index.html" />
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Editorial%20Index.html"/>
@@ -27,7 +27,7 @@
 
           <h4>
             <span>
-              <a class="name1" href="about me index.html"style="text-decorations:none; color:inherit">About</a>
+              <a class="name1" href="About Me index.html"style="text-decorations:none; color:inherit">About</a>
               <!--You can change the link in "href" -->
             </span>
             <span> <a class="name1"href="Editorial index.html"style="text-decorations:none; color:inherit">Editorial</a> </span>
