--- a/photography index.html
+++ b/photography index.html
@@ -88,43 +88,43 @@
         <img src="images/stilllife/carflower.jpg"  style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/driedflower.jpg" style="width:70%;position:relative; left: 1.5vw;">
+        <img src="images/stilllife/DriedFlower.jpg" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/floweronchaircopy.jpg" style="width:70%;position:relative; left: 1.5vw;">
+        <img src="images/stilllife/FlowerOnChaircopy.jpg" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/goodypurse.jpg" style="width:70%;position:relative; left: 1.5vw;">
+        <img src="images/stilllife/goodypurse.JPG" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
         <img src="images/stilllife/HandandCherry.jpg" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/italianflower.jpg" style="width:40%;position:relative; left: 15.75vw;" >
+        <img src="images/stilllife/ItalianFlower.jpg" style="width:40%;position:relative; left: 15.75vw;" >
       </div>
       <div class="item">
         <img src="images/stilllife/legs.jpg" style="width:40%;position:relative; left: 15.75vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/purse.jpg" style="width:70%;position:relative; left: 1.5vw;">
+        <img src="images/stilllife/purse.JPG" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
         <img src="images/stilllife/sammyglass.jpg" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/steamedflowers2.jpg" style="width:40%;position:relative; left: 15.75vw;">
+        <img src="images/stilllife/SteamedFlowers2.JPG" style="width:40%;position:relative; left: 15.75vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/trainflower.jpg" style="width:70%;position:relative; left: 1.5vw;">
+        <img src="images/stilllife/trainflower.JPG" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/steamedflower.jpg" style="width:70%;position:relative; left: 1.5vw;">
+        <img src="images/stilllife/steamedflower.JPG" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/hand.jpg" style="width:70%;position:relative; left: 1.5vw;">
+        <img src="images/stilllife/hand.JPG" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
-        <img src="images/stilllife/windowlight.jpg" style="width:70%;position:relative; left: 1.5vw;">
+        <img src="images/stilllife/WindowLight.jpg" style="width:70%;position:relative; left: 1.5vw;">
       </div>
 
 
@@ -194,7 +194,7 @@
               <img src="images/portraits/sneak2.jpg"  style="width:40%;position:relative; left: 15.75vw;">
             </div>
             <div class="item">
-              <img src="images/portraits/spider.jpg" style="width:70%;position:relative; left: 1.5vw;">
+              <img src="images/portraits/Spider.jpg" style="width:70%;position:relative; left: 1.5vw;">
             </div>
             <div class="item">
               <img src="images/portraits/stop.jpg"  style="width:40%;position:relative; left: 15.75vw;">
@@ -206,22 +206,22 @@
               <img src="images/portraits/marniemoo.jpg"  style="width:40%;position:relative; left: 15.75vw;">
             </div>
             <div class="item">
-              <img src="images/portraits/marnielighteyes.jpg"  style="width:40%;position:relative; left: 15.75vw;">
+              <img src="images/portraits/Marnielighteyes.jpg"  style="width:40%;position:relative; left: 15.75vw;">
             </div>
             <div class="item">
-              <img src="images/portraits/pockethands.jpg"  style="width:40%;position:relative; left: 15.75vw;">
+              <img src="images/portraits/pockethands.JPG"  style="width:40%;position:relative; left: 15.75vw;">
             </div>
             <div class="item">
               <img src="images/portraits/sittingmarnie.jpg" style="width:70%;position:relative; left: 1.5vw;">
             </div>
             <div class="item">
-              <img src="images/portraits/sarah.jpg" style="width:70%;position:relative; left: 1.5vw;">
+              <img src="images/portraits/Sarah.jpg" style="width:70%;position:relative; left: 1.5vw;">
             </div>
             <div class="item">
-              <img src="images/portraits/sarahsmirk.jpg" style="width:70%;position:relative; left: 1.5vw;">
+              <img src="images/portraits/Sarahsmirk.jpg" style="width:70%;position:relative; left: 1.5vw;">
             </div>
             <div class="item">
-              <img src="images/portraits/sammy.png" style="width:70%;position:relative; left: 1.5vw;">
+              <img src="images/portraits/Sammy.png" style="width:70%;position:relative; left: 1.5vw;">
             </div>
             <div class="item">
               <img src="images/portraits/sammycereal.jpg" style="width:70%;position:relative; left: 1.5vw;">
@@ -230,16 +230,16 @@
               <img src="images/portraits/sammymilk.jpg"  style="width:70%;position:relative; left: 1.5vw;">
             </div>
             <div class="item">
-              <img src="images/portraits/kat.jpg"  style="width:40%;position:relative; left: 15.75vw;">
+              <img src="images/portraits/kat.JPG"  style="width:40%;position:relative; left: 15.75vw;">
             </div>
             <div class="item">
-              <img src="images/portraits/katarm.jpg"  style="width:40%;position:relative; left: 15.75vw;">
+              <img src="images/portraits/katarm.JPG"  style="width:40%;position:relative; left: 15.75vw;">
             </div>
             <div class="item">
               <img src="images/portraits/katcrouching.png"  style="width:40%;position:relative; left: 15.75vw;">
             </div>
             <div class="item">
-              <img src="images/portraits/katleft.jpg" style="width:70%;position:relative; left: 1.5vw;">
+              <img src="images/portraits/katleft.JPG" style="width:70%;position:relative; left: 1.5vw;">
             </div>
           </div>
 
@@ -282,34 +282,34 @@
                             <img src="images/Documentary/portugalcave.jpg"  style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/vietnamwater.jpg" style="width:70%;position:relative; left: 1.5vw;">
+                            <img src="images/Documentary/vietnamwater.JPG" style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/vietnamnews.jpg"  style="width:70%;position:relative; left: 1.5vw;">
+                            <img src="images/Documentary/vietnamnews.JPG"  style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/vietnammekong3.jpg"  style="width:70%;position:relative; left: 1.5vw;">
+                            <img src="images/Documentary/vietnammekong3.JPG"  style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/vietnammeatmarket.jpg"  style="width:70%;position:relative; left: 1.5vw;">
+                            <img src="images/Documentary/vietnammeatmarket.JPG"  style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/vietnamflowermarket.jpg"  style="width:40%;position:relative; left: 15.75vw;">
+                            <img src="images/Documentary/vietnamflowermarket.JPG"  style="width:40%;position:relative; left: 15.75vw;">
                           </div>
                           <div class="item">
                             <img src="images/Documentary/vietnamflower.jpg"  style="width:40%;position:relative; left: 15.75vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/vietnamfish.jpg"  style="width:70%;position:relative; left: 1.5vw;">
+                            <img src="images/Documentary/vietnamfish.JPG"  style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
                             <img src="images/Documentary/vietnambubbles.jpg"  style="width:40%;position:relative; left: 15.75vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/vietnambikes.jpg"  style="width:40%;position:relative; left: 15.75vw;">
+                            <img src="images/Documentary/vietnambikes.JPG"  style="width:40%;position:relative; left: 15.75vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/vietnamalley.jpg"  style="width:40%;position:relative; left: 15.75vw;">
+                            <img src="images/Documentary/vietnamalley.JPG"  style="width:40%;position:relative; left: 15.75vw;">
                           </div>
                           <div class="item">
                             <img src="images/Documentary/newyorkpolice.jpg"  style="width:40%;position:relative; left: 15.75vw;">
@@ -327,7 +327,7 @@
                             <img src="images/Documentary/londonpark.jpg" style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/london3.jpg"  style="width:40%;position:relative; left: 15.75vw;">
+                            <img src="images/Documentary/London3.jpg"  style="width:40%;position:relative; left: 15.75vw;">
                           </div>
                           <div class="item">
                             <img src="images/Documentary/italy7.jpg"  style="width:40%;position:relative; left: 15.75vw;">
@@ -342,7 +342,7 @@
                             <img src="images/Documentary/crystalpalace2.jpg" style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
-                            <img src="images/Documentary/crows.jpg" style="width:70%;position:relative; left: 1.5vw;">
+                            <img src="images/Documentary/crows.JPG" style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                         </div>
 
