--- a/About Me index.html
+++ b/About Me index.html
@@ -35,7 +35,7 @@
             <span>
               <a class="name1" href="About Me index.html"style="text-decorations:none; color:inherit">About</a></span>
               <!--You can change the link in "href" -->
-            <span> <a class="name1"href="Editorial index.html"style="text-decorations:none; color:inherit">Editorial</a> </span>
+            <span> <a class="name1"href="Editorial Index.html"style="text-decorations:none; color:inherit">Editorial</a> </span>
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="Photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
              <!-- You can change the link in "href" -->
