--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="name1" href="About Me index.html"style="text-decorations:none; color:inherit">About</a>
               <!--You can change the link in "href" -->
             </span>
-            <span> <a class="name1"href="Editorial index.html"style="text-decorations:none; color:inherit">Editorial</a> </span>
+            <span> <a class="name1"href="Editorial Index.html"style="text-decorations:none; color:inherit">Editorial</a> </span>
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
              <!-- You can change the link in "href" -->
