editorial image changes
editorial image changes

--- a/Editorial Index.html
+++ b/Editorial Index.html
@@ -65,7 +65,7 @@ to reflect <br> various moods and tones.<p> </div>
 of traditional image and type setting<br> while simultaneously expressing the <br>
 socio-political  themes in the work.<p></div>
 
-<link href='test2.css' rel='stylesheet' type='text/css'>
+<!-- <link href='test2.css' rel='stylesheet' type='text/css'> -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
@@ -134,7 +134,7 @@ socio-political  themes in the work.<p></div>
                               <div class="item" data-slide-number="3">
                                   <img src="images/juice.jpg"></div>
                               <div class="item" data-slide-number="4">
-                                  <img src="images/redrose.jpg"></div>
+                                  <img src="images/redrose.JPG"></div>
 															<div class="item" data-slide-number="5">
 																	<img src="images/steamflower.jpg"></div>
 															<div class="item" data-slide-number="6">
@@ -167,13 +167,13 @@ socio-political  themes in the work.<p></div>
 														<!-- Carousel items -->
 														<div class="carousel-inner">
 																<div class="active item" data-slide-number="0">
-																		<img src="images/frontcover.png"></div>
+																		<img src="images/Frontcover.png"></div>
 																<div class="item" data-slide-number="1">
-																		<img src="images/interiormag.png"></div>
+																		<img src="images/interiorMag.png"></div>
 																<div class="item" data-slide-number="2">
-																		<img src="images/frontbackspread.png"></div>
+																		<img src="images/FrontBackspread.png"></div>
 																<div class="item" data-slide-number="3">
-																		<img src="images/backofmag.png"></div>
+																		<img src="images/BackofMag.png"></div>
 														</div>
 														<!-- Carousel nav -->
 														<a  class="leftcarousel-control" href="#myCarousel1" role="button" data-slide="prev">
