--- a/photography index.html
+++ b/photography index.html
@@ -303,7 +303,7 @@
                             <img src="images/documentary/vietnamfish.JPG"  style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
-                            <img src="images/documentary/vietnambubbles.jpg"  style="width:40%;position:relative; left: 15.75vw;">
+                            <img src="images/documentary/vietnambubbles.JPG"  style="width:40%;position:relative; left: 15.75vw;">
                           </div>
                           <div class="item">
                             <img src="images/documentary/vietnambikes.JPG"  style="width:40%;position:relative; left: 15.75vw;">
@@ -339,7 +339,7 @@
                             <img src="images/documentary/italy2.jpg" style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
-                            <img src="images/documentary/crystalpalace2.jpg" style="width:70%;position:relative; left: 1.5vw;">
+                            <img src="images/documentary/crystalpalace2.JPG" style="width:70%;position:relative; left: 1.5vw;">
                           </div>
                           <div class="item">
                             <img src="images/documentary/crows.JPG" style="width:70%;position:relative; left: 1.5vw;">
