--- a/gallery index.html
+++ b/gallery index.html
@@ -28,33 +28,33 @@
       </div>
       <br>
       <div><img class="image3" src="images/documentary/vietnamwoman.jpg" /></div>
-      <div><img class="image4" src="images/documentary/vietnamwater.jpg" />  </div>
+      <div><img class="image4" src="images/documentary/vietnamwater.JPG" />  </div>
       <br>
-      <div><img class="image5" src="images/documentary/vietnamwalk.jpg" />  </div>
+      <div><img class="image5" src="images/documentary/vietnamwalk.JPG" />  </div>
       <br>
       <div><img class="image6" src="images/documentary/vietnamtemple.jpeg" />  </div>
       <br>
       <div><img class="image7" src="images/documentary/vietnamsoup2.jpg" />  </div>
       <br>
-      <div><img class="image8" src="images/documentary/vietnamrock.jpg" />  </div>
+      <div><img class="image8" src="images/documentary/vietnamrock.JPG" />  </div>
       <br>
       <div><img class="image9" src="images/documentary/vietnamranicig.jpg" />  </div>
       <br>
-      <div><img class="image10" src="images/documentary/vietnampalm.jpg" />  </div>
+      <div><img class="image10" src="images/documentary/vietnampalm.JPG" />  </div>
       <br>
-      <div><img class="image11" src="images/documentary/vietnamnews.jpg" />  </div>
+      <div><img class="image11" src="images/documentary/vietnamnews.JPG" />  </div>
       <br>
-      <div><img class="image12" src="images/documentary/vietnammekong3.jpg" />  </div>
+      <div><img class="image12" src="images/documentary/vietnammekong3.JPG" />  </div>
       <br>
       <div><img class="image13" src="images/documentary/newyork5vietnammekong2.jpg" />  </div>
       <br>
       <div><img class="image14" src="images/documentary/vietnamlamp.jpg" />  </div>
       <br>
-      <div><img class="image15" src="images/documentary/vietnamjacket.jpg" />  </div>
+      <div><img class="image15" src="images/documentary/vietnamjacket.JPG" />  </div>
       <br>
       <div><img class="image16" src="images/documentary/vietnamgateway.jpg" /></div>
       <br>
-      <div><img class="image17" src="images/documentary/vietnamfruitandveg.jpg" /></div>
+      <div><img class="image17" src="images/documentary/vietnamfruitandveg.JPG" /></div>
       <br>
       <div><img class="image18" src="images/documentary/vietnamfrog.jpg" /></div>
   </marquee>
@@ -62,19 +62,19 @@
 <div>
   <marquee class= "row2" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="6" direction="up" height="800">
 
-  <div>  <img class="image19" src="images/documentary/vietnamfish.jpg" /></div>
+  <div>  <img class="image19" src="images/documentary/vietnamfish.JPG" /></div>
   <br>
   <div>  <img class="image20" src="images/documentary/vietnamdog.jpg" /></div>
   <br>
-  <div>  <img class="image21" src="images/documentary/vietnamchop2.jpg" /></div>
+  <div>  <img class="image21" src="images/documentary/vietnamchop2.JPG" /></div>
   <br>
-  <div>  <img class="image22" src="images/documentary/vietnamcatfish.jpg" /></div>
+  <div>  <img class="image22" src="images/documentary/vietnamcatfish.JPG" /></div>
   <br>
   <div>  <img class="image23" src="images/documentary/vietnambuilding.jpg" /></div>
   <br>
-  <div>  <img class="image24" src="images/documentary/vietnambubbles.jpg" /></div>
+  <div>  <img class="image24" src="images/documentary/vietnambubbles.JPG" /></div>
   <br>
-  <div>  <img class="image25" src="images/documentary/vietnambikes.jpg" /></div>
+  <div>  <img class="image25" src="images/documentary/vietnambikes.JPG" /></div>
   <br>
   <div>  <img class="image26" src="images/documentary/vietnamalley.jpg" /></div>
   <br>
@@ -82,11 +82,11 @@
   <br>
   <div>  <img class="image28" src="images/documentary/rani.jpg" /></div>
   <br>
-  <div>  <img class="image29" src="images/documentary/portugalClothingline.jpg" /></div>
+  <div>  <img class="image29" src="images/documentary/portugalClothingLine.jpg" /></div>
   <br>
   <div>  <img class="image30" src="images/documentary/portugalcave.jpg" /></div>
   <br>
-  <div>  <img class="image31" src="images/documentary/portugalcafe.jpg" /></div>
+  <div>  <img class="image31" src="images/documentary/portugalcafe.JPG" /></div>
   <br>
   <div>  <img class="image32" src="images/documentary/portugalbridge.jpg" /></div>
   <br>
@@ -94,9 +94,9 @@
   <br>
   <div>  <img class="image34" src="images/documentary/portugal4" /></div>
   <br>
-  <div>  <img class="image35" src="images/documentary/portugal3" /></div>
+  <div>  <img class="image35" src="images/documentary/portugal3.jpg" /></div>
   <br>
-  <div>  <img class="image36" src="images/documentary/portugal2" /></div>
+  <div>  <img class="image36" src="images/documentary/portugal2.jpg" /></div>
   <br>
   </marquee>
 </div>
@@ -128,7 +128,7 @@
     <br>
     <div>  <img class="image48" src="images/documentary/londonpark.jpg" /></div>
     <br>
-    <div>  <img class="image49" src="images/documentary/london6.png" /></div>
+    <div>  <img class="image49" src="images/documentary/London6.png" /></div>
     <br>
     <div>  <img class="image50" src="images/documentary/london3.jpg" /></div>
     <br>
@@ -149,19 +149,19 @@
 
     <div>  <img class="image55" src="images/documentary/italy3.jpg" /></div>
     <br>
-    <div>  <img class="image56" src="images/stilllife/purse.jpg" /></div>
+    <div>  <img class="image56" src="images/stilllife/purse.JPG" /></div>
     <br>
     <div>  <img class="image57" src="images/documentary/davinaeyes.jpg" /></div>
     <br>
     <div>  <img class="image58" src="images/documentary/davina.jpg" /></div>
     <br>
-    <div>  <img class="image59" src="images/documentary/crystalpalace2.jpg" /></div>
+    <div>  <img class="image59" src="images/documentary/crystalpalace2.JPG" /></div>
     <br>
     <div>  <img class="image60" src="images/documentary/crystalpalace.jpg" /></div>
     <br>
     <div>  <img class="image61" src="images/documentary/crows.jpg" /></div>
     <br>
-    <div>  <img class="image62" src="images/stilllife/floweronchaircopy.jpg" /></div>
+    <div>  <img class="image62" src="images/stilllife/FlowerOnChaircopy.jpg" /></div>
     <br>
     <div>  <img class="image63" src="images/stilllife/steamedflowers2.jpg" /></div>
     <br>
@@ -169,7 +169,7 @@
     <br>
     <div>  <img class="image65" src="images/stilllife/sammyglass.jpg" /></div>
     <br>
-    <div>  <img class="image66" src="images/stilllife/handandcherry.jpg" /></div>
+    <div>  <img class="image66" src="images/stilllife/HandandCherry.jpg" /></div>
     <br>
     <div>  <img class="image67" src="images/stilllife/italianflower.jpg" /></div>
     <br>
@@ -179,7 +179,7 @@
     <br>
     <div>  <img class="image69" src="images/stilllife/windowlight.jpg" /></div>
     <br>
-    <div>  <img class="image70" src="images/stilllife/hand.jpg" /></div>
+    <div>  <img class="image70" src="images/stilllife/hand.JPG" /></div>
     <br>
     <div>  <img class="image71" src="images/stilllife/legs.jpg" /></div>
     <br>
