--- a/gallery index.html
+++ b/gallery index.html
@@ -34,7 +34,7 @@
       <br>
       <div><img class="image6" src="images/documentary/vietnamtemple.jpeg" />  </div>
       <br>
-      <div><img class="image7" src="images/documentary/vietnamsoup2.jpg" />  </div>
+      <div><img class="image7" src="images/documentary/vietnamsoup2.JPG" />  </div>
       <br>
       <div><img class="image8" src="images/documentary/vietnamrock.JPG" />  </div>
       <br>
@@ -46,13 +46,13 @@
       <br>
       <div><img class="image12" src="images/documentary/vietnammekong3.JPG" />  </div>
       <br>
-      <div><img class="image13" src="images/documentary/newyork5vietnammekong2.jpg" />  </div>
+      <div><img class="image13" src="images/documentary/vietnammekong2.jpg" />  </div>
       <br>
       <div><img class="image14" src="images/documentary/vietnamlamp.jpg" />  </div>
       <br>
       <div><img class="image15" src="images/documentary/vietnamjacket.JPG" />  </div>
       <br>
-      <div><img class="image16" src="images/documentary/vietnamgateway.jpg" /></div>
+      <div><img class="image16" src="images/documentary/vietnamgateway.JPG" /></div>
       <br>
       <div><img class="image17" src="images/documentary/vietnamfruitandveg.JPG" /></div>
       <br>
@@ -76,9 +76,9 @@
   <br>
   <div>  <img class="image25" src="images/documentary/vietnambikes.JPG" /></div>
   <br>
-  <div>  <img class="image26" src="images/documentary/vietnamalley.jpg" /></div>
+  <div>  <img class="image26" src="images/documentary/vietnamalley.JPG" /></div>
   <br>
-  <div>  <img class="image27" src="images/documentary/steph.jpg" /></div>
+  <div>  <img class="image27" src="images/documentary/steph.JPG" /></div>
   <br>
   <div>  <img class="image28" src="images/documentary/rani.jpg" /></div>
   <br>
@@ -92,11 +92,11 @@
   <br>
   <div>  <img class="image33" src="images/documentary/portugalbalcony.jpg" /></div>
   <br>
-  <div>  <img class="image34" src="images/documentary/portugal4" /></div>
+  <div>  <img class="image34" src="images/documentary/portugal4.jpeg" /></div>
   <br>
-  <div>  <img class="image35" src="images/documentary/portugal3.jpg" /></div>
+  <div>  <img class="image35" src="images/documentary/portugal3.jpeg" /></div>
   <br>
-  <div>  <img class="image36" src="images/documentary/portugal2.jpg" /></div>
+  <div>  <img class="image36" src="images/documentary/portugal2.jpeg" /></div>
   <br>
   </marquee>
 </div>
@@ -122,7 +122,7 @@
     <br>
     <div>  <img class="image45" src="images/documentary/newyork1.jpg" /></div>
     <br>
-    <div>  <img class="image46" src="images/documentary/miacigcute.jpg" /></div>
+    <div>  <img class="image46" src="images/documentary/miacigcute.JPG" /></div>
     <br>
     <div>  <img class="image47" src="images/documentary/miacig.jpg" /></div>
     <br>
@@ -136,7 +136,7 @@
     <br>
     <div>  <img class="image52" src="images/documentary/italy7.jpg" /></div>
     <br>
-    <div>  <img class="image53" src="images/documentary/italy5.jpg" /></div>
+    <div>  <img class="image53" src="images/documentary/italy5.JPG" /></div>
     <br>
     <div>  <img class="image54" src="images/documentary/italy4.jpg" /></div>
     <br>
@@ -147,11 +147,11 @@
 
   <marquee class= "row4" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="7" direction="up" height="800">
 
-    <div>  <img class="image55" src="images/documentary/italy3.jpg" /></div>
+    <div>  <img class="image55" src="images/documentary/italy3.JPG" /></div>
     <br>
     <div>  <img class="image56" src="images/stilllife/purse.JPG" /></div>
     <br>
-    <div>  <img class="image57" src="images/documentary/davinaeyes.jpg" /></div>
+    <div>  <img class="image57" src="images/documentary/davinaeyes.JPG" /></div>
     <br>
     <div>  <img class="image58" src="images/documentary/davina.jpg" /></div>
     <br>
@@ -159,11 +159,11 @@
     <br>
     <div>  <img class="image60" src="images/documentary/crystalpalace.jpg" /></div>
     <br>
-    <div>  <img class="image61" src="images/documentary/crows.jpg" /></div>
+    <div>  <img class="image61" src="images/documentary/crows.JPG" /></div>
     <br>
     <div>  <img class="image62" src="images/stilllife/FlowerOnChaircopy.jpg" /></div>
     <br>
-    <div>  <img class="image63" src="images/stilllife/steamedflowers2.jpg" /></div>
+    <div>  <img class="image63" src="images/stilllife/SteamedFlowers2.JPG" /></div>
     <br>
     <div>  <img class="image64" src="images/stilllife/carflower.jpg" /></div>
     <br>
@@ -171,13 +171,13 @@
     <br>
     <div>  <img class="image66" src="images/stilllife/HandandCherry.jpg" /></div>
     <br>
-    <div>  <img class="image67" src="images/stilllife/italianflower.jpg" /></div>
+    <div>  <img class="image67" src="images/stilllife/ItalianFlower.jpg" /></div>
     <br>
-    <div>  <img class="image68" src="images/stilllife/handanddriedflower.jpg" /></div>
+    <div>  <img class="image68" src="images/stilllife/HandandDriedFlower.jpg" /></div>
     <br>
     <div>  <img class="image68" src="images/stilllife/driedflower.jpg" /></div>
     <br>
-    <div>  <img class="image69" src="images/stilllife/windowlight.jpg" /></div>
+    <div>  <img class="image69" src="images/stilllife/WindowLight.jpg" /></div>
     <br>
     <div>  <img class="image70" src="images/stilllife/hand.JPG" /></div>
     <br>
@@ -197,7 +197,7 @@
   <marquee class= "row5" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="7" direction="down" height="800">
 
 
-        <div>  <img class="image72" src="images/stilllife/trainflower.jpg" /></div>
+        <div>  <img class="image72" src="images/stilllife/trainflower.JPG" /></div>
         <br>
         <div>  <img class="image73" src="images/stilllife/legs.jpg" /></div>
         <br>
