--- a/gallery index.html
+++ b/gallery index.html
@@ -46,7 +46,7 @@
       <br>
       <div><img class="image12" src="images/documentary/vietnammekong3.JPG" />  </div>
       <br>
-      <div><img class="image13" src="images/documentary/vietnammekong2.jpg" />  </div>
+      <div><img class="image13" src="images/documentary/vietnammekong2.JPG" />  </div>
       <br>
       <div><img class="image14" src="images/documentary/vietnamlamp.jpg" />  </div>
       <br>
@@ -70,7 +70,7 @@
   <br>
   <div>  <img class="image22" src="images/documentary/vietnamcatfish.JPG" /></div>
   <br>
-  <div>  <img class="image23" src="images/documentary/vietnambuilding.jpg" /></div>
+  <div>  <img class="image23" src="images/documentary/vietnambuilding.JPG" /></div>
   <br>
   <div>  <img class="image24" src="images/documentary/vietnambubbles.JPG" /></div>
   <br>
@@ -96,7 +96,7 @@
   <br>
   <div>  <img class="image35" src="images/documentary/portugal3.jpeg" /></div>
   <br>
-  <div>  <img class="image36" src="images/documentary/portugal2.jpeg" /></div>
+  <div>  <img class="image36" src="images/documentary/portugal2.jpg" /></div>
   <br>
   </marquee>
 </div>
@@ -157,7 +157,7 @@
     <br>
     <div>  <img class="image59" src="images/documentary/crystalpalace2.JPG" /></div>
     <br>
-    <div>  <img class="image60" src="images/documentary/crystalpalace.jpg" /></div>
+    <div>  <img class="image60" src="images/documentary/crystalpalace.JPG" /></div>
     <br>
     <div>  <img class="image61" src="images/documentary/crows.JPG" /></div>
     <br>
@@ -248,11 +248,11 @@
             <br>
             <div>  <img class="image95" src="images/portraits/marniemoo.jpg" /></div>
             <br>
-            <div>  <img class="image96" src="images/portraits/marniesidelook.jpg" /></div>
+            <div>  <img class="image96" src="images/portraits/Marniesidelook.jpg" /></div>
             <br>
-            <div>  <img class="image97" src="images/portraits/sammy.jpg" /></div>
+            <div>  <img class="image97" src="images/portraits/Sammy.png" /></div>
             <br>
-            <div>  <img class="image98" src="images/portraits/pockethands.jpg" /></div>
+            <div>  <img class="image98" src="images/portraits/pockethands.JPG" /></div>
             <br>
             <div>  <img class="image99" src="images/portraits/marniehair.jpg" /></div>
             <br>
