more gallery changes
more gallery changes

--- a/gallery index.html
+++ b/gallery index.html
@@ -130,9 +130,9 @@
     <br>
     <div>  <img class="image49" src="images/documentary/London6.png" /></div>
     <br>
-    <div>  <img class="image50" src="images/documentary/london3.jpg" /></div>
+    <div>  <img class="image50" src="images/documentary/London3.jpg" /></div>
     <br>
-    <div>  <img class="image51" src="images/documentary/london1.jpg" /></div>
+    <div>  <img class="image51" src="images/documentary/London1.JPG" /></div>
     <br>
     <div>  <img class="image52" src="images/documentary/italy7.jpg" /></div>
     <br>
@@ -175,7 +175,7 @@
     <br>
     <div>  <img class="image68" src="images/stilllife/HandandDriedFlower.jpg" /></div>
     <br>
-    <div>  <img class="image68" src="images/stilllife/driedflower.jpg" /></div>
+    <div>  <img class="image68" src="images/stilllife/DriedFlower.jpg" /></div>
     <br>
     <div>  <img class="image69" src="images/stilllife/WindowLight.jpg" /></div>
     <br>
@@ -201,7 +201,7 @@
         <br>
         <div>  <img class="image73" src="images/stilllife/legs.jpg" /></div>
         <br>
-        <div>  <img class="image74" src="images/stilllife/windowlight.jpg" /></div>
+        <div>  <img class="image74" src="images/stilllife/WindowLight.jpg" /></div>
         <br>
         <div>  <img class="image75" src="images/stilllife/hand.jpg" /></div>
         <br>
@@ -223,7 +223,7 @@
         <br>
         <div>  <img class="image84" src="images/portraits/stop.jpg" /></div>
         <br>
-        <div>  <img class="image85" src="images/portraits/spider.jpg" /></div>
+        <div>  <img class="image85" src="images/portraits/Spider.jpg" /></div>
         <br>
         <div>  <img class="image86" src="images/portraits/twistlegs.jpg" /></div>
         <br>
@@ -240,7 +240,7 @@
 
             <div>  <img class="image91" src="images/portraits/seeme.jpg" /></div>
             <br>
-            <div>  <img class="image92" src="images/portraits/sideleen.jpg" /></div>
+            <div>  <img class="image92" src="images/portraits/sidelean.jpg" /></div>
             <br>
             <div>  <img class="image93" src="images/portraits/fallingerica.jpg" /></div>
             <br>
@@ -256,17 +256,17 @@
             <br>
             <div>  <img class="image99" src="images/portraits/marniehair.jpg" /></div>
             <br>
-            <div>  <img class="image100" src="images/portraits/marnielighteyes.jpg" /></div>
+            <div>  <img class="image100" src="images/portraits/Marnielighteyes.jpg" /></div>
             <br>
-            <div>  <img class="image102" src="images/portraits/sarahsmirk.jpg" /></div>
+            <div>  <img class="image102" src="images/portraits/Sarahsmirk.jpg" /></div>
             <br>
-            <div>  <img class="image103" src="images/portraits/sarah.jpg" /></div>
+            <div>  <img class="image103" src="images/portraits/Sarah.jpg" /></div>
             <br>
             <div>  <img class="image104" src="images/portraits/sammymilk.jpg" /></div>
             <br>
             <div>  <img class="image105" src="images/portraits/twistlegs.jpg" /></div>
             <br>
-            <div>  <img class="image106" src="images/portraits/kat.jpg" /></div>
+            <div>  <img class="image106" src="images/portraits/kat.JPG" /></div>
             <br>
             <div>  <img class="image107" src="images/portraits/sneak2.jpg" /></div>
             <br>
