photography link missing
photography link missing

--- a/About Me index.html
+++ b/About Me index.html
@@ -10,6 +10,7 @@
 <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/About%20Me%20index.html"/>
 <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/Editorial%20Index.html"/>
   <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/morganvmarkey%20index.html"/>
+<link href="https://mvmarkey.github.io/photography%20index.html"/>
 <style>
 .sticky {
   position: -webkit-sticky;
@@ -37,7 +38,7 @@
               <!--You can change the link in "href" -->
             <span> <a class="name1"href="Editorial Index.html"style="text-decorations:none; color:inherit">Editorial</a> </span>
             <!-- You can change the link in "href" -->
-             <span> <a class="name1"href="Photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
+             <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
              <!-- You can change the link in "href" -->
           </h4>
 
