--- a/photography index.html
+++ b/photography index.html
@@ -11,7 +11,7 @@
   <link href="photography site.css" rel="stylesheet" type="text/css" media="screen"/>
   <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/About%20Me%20index.html"/>
   <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/Editorial%20Index.html"/>
-  <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/morganvmarkey%20index.html"/>
+  <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/%20index.html"/>
   <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/gallery%20index.html"/>
 
 
@@ -28,7 +28,7 @@
     <div class="header">
       <!-- <h1><h1> -->
 
-         <span> <a class="name" href="morganvmarkey index.html"style="text-decorations:none; color:inherit">Morgan Markey</a></span>
+         <span> <a class="name" href="index.html"style="text-decorations:none; color:inherit">Morgan Markey</a></span>
       </div>
 
       <ul class="sub-menu">
