--- a/About Me index.html
+++ b/About Me index.html
@@ -9,7 +9,7 @@
 <link href="About Me site.css" rel="stylesheet" type="text/css" media="screen"/>
 <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/About%20Me%20index.html"/>
 <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/Editorial%20Index.html"/>
-  <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/morganvmarkey%20index.html"/>
+<link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html"/>
 <link href="https://mvmarkey.github.io/photography%20index.html"/>
 <style>
 .sticky {
@@ -26,7 +26,7 @@
   <li class="menu-item">
     <div class="header">
       <!-- <h1><h1> -->
-         <span> <a class="name" href="morganvmarkey index.html" style="text-decorations:none; color:inherit">Morgan Markey</a></span>
+         <span> <a class="name" href="index.html" style="text-decorations:none; color:inherit">Morgan Markey</a></span>
       </div>
       <ul class="sub-menu">
         <li class="sub-menu-item">
