--- a/Editorial Index.html
+++ b/Editorial Index.html
@@ -9,10 +9,9 @@
 <link href="Editorial site.css" rel="stylesheet" type="text/css" media="screen"/>
 <!-- <link href="2-vertical.css" rel="stylesheet"> -->
 <script type="javascript" src="Editorial.js"></script>
-<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/mvmarkey%20index.html" />
+<link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html" />
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Editorial%20Index.html"/>
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photography%20index.html"/>
-<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/morganvmarkey%20index.html"/>
 </head>
 
 <ul id="menu">
