--- a/photography index.html
+++ b/photography index.html
@@ -11,7 +11,7 @@
   <link href="photography site.css" rel="stylesheet" type="text/css" media="screen"/>
   <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/About%20Me%20index.html"/>
   <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/Editorial%20Index.html"/>
-  <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/%20index.html"/>
+  <link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html"/>
   <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/gallery%20index.html"/>
 
 
