--- a/Editorial Index.html
+++ b/Editorial Index.html
@@ -19,7 +19,7 @@
     <div class="header">
       <!-- <h1><h1> -->
 
-      <span> <a class="name" href="morganvmarkey index.html"style="text-decorations:none; color:inherit">Morgan Markey</a></span>
+      <span> <a class="name" href="index.html"style="text-decorations:none; color:inherit">Morgan Markey</a></span>
       </div>
       <ul class="sub-menu">
         <li class="sub-menu-item">
