--- a/photography index.html
+++ b/photography index.html
@@ -84,7 +84,7 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
-      <div class="item">
+    <div class="item active">
         <img src="images/stilllife/DriedFlower.jpg" style="width:70%;position:relative; left: 1.5vw;">
       </div>
       <div class="item">
@@ -153,7 +153,7 @@
 
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
-            <div class="item">
+          <div class="item active">
               <img src="images/portraits/ericafilm2.jpg" style="width:70%;position:relative; left: 1.5vw;">
             </div>
             <div class="item">
