--- a/photography index.html
+++ b/photography index.html
@@ -380,7 +380,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
             <div class="item active">
-                <img src="images/GesturesMovements/Grip.JPG" style="width:40%;position:relative; left: 13vw;">
+                <img src="images/GesturesMovements/Grip.jpg" style="width:40%;position:relative; left: 13vw;">
                 </div>
                 <div class="item">
                   <img src="images/GesturesMovements/sammyglass.jpg"  style="width:70%;position:relative; left: 1.5vw;">
