--- a/About Me index.html
+++ b/About Me index.html
@@ -156,9 +156,13 @@ FEATURED IN <div>
 <div>Grazia Magazine</div>
 <div>(photographs)</div>
 <div class="example2">
-<div>Mixmag</div>
+<div>Mixmag Magazine</div>
+<div>(photographs)</div>
+
+<div class="example10">
 <div>Textile View Magazine</div>
 <div>(photographs)</div>
+
 <div class="example2">
 <div>Photobook Café</div>
 <div>(photobook)</div>
