--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
 
 
+<script type="text/javascript">
+<!--
+if (screen.width <= 699) {
+window.location = "https://mvmarkey.cargo.site/";
+}
+//-->
+</script>
+
 
 </script>
 
