--- a/photography index.html
+++ b/photography index.html
@@ -2,7 +2,6 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 
@@ -12,7 +11,7 @@
   <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/About%20Me%20index.html"/>
   <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/Books%20Index.html"/>
   <link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html"/>
-  <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/gallery%20index.html"/>
+
 
 
   <title>photography</title>
@@ -51,7 +50,7 @@
 
     </ul>
 
-<span> <a class="gallery" href="gallery index.html">GALLERY</a> </span>
+<span>
 
     <div class="w3-row-padding">
 
@@ -77,7 +76,7 @@
       </div>
         <div class="w3-col s3 w3-container">
           <a class= "ChloeValorsoJewellery" href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Forest')" style="text-decorations:none; color:inherit";>
-          Valorso Jewellery
+          Valorso 
           </a>
         </div>
     </div>
